; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_db.c_db_set_key.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_db.c_db_set_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@db_enabled = common dso_local global i32 0, align 4
@mtx = common dso_local global i32 0, align 4
@ring = common dso_local global i32 0, align 4
@cnd = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @db_set_key(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @db_enabled, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %3
  br label %18

10:                                               ; preds = %3
  %11 = call i32 @mtx_lock(i32* @mtx)
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @ring_put_key(i32* @ring, i32 %12, i32 %13, i32 %14)
  %16 = call i32 @cnd_signal(i32* @cnd)
  %17 = call i32 @mtx_unlock(i32* @mtx)
  br label %18

18:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @ring_put_key(i32*, i32, i32, i32) #1

declare dso_local i32 @cnd_signal(i32*) #1

declare dso_local i32 @mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
